public/css/v4.css
/* ... */
.col-sm-4 {
    width: 33.3333% !important;
}
.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
	margin-left: 0;
}
.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
	right: 0px;
	background-color: #4caf50;
}

.dropdown {
    text-align: center;
}

.button, .dropdown-menu {
    margin: 10px auto
}

.dropdown-menu {
    min-width: 250px !important;
    border-radius: 0px !important;
    border: 0px solid #fff !important;
}

.navbar .nav > li > .dropdown-menu::after {
	position: relative !important;
    top: 0px !important;
    content: none !important;
}
.navbar .nav > li > .dropdown-menu::before {
	border-bottom: 0px solid rgba(0, 0, 0, 0.2) !important;
    border-left: 0px solid transparent !important;
    border-right: 0px solid transparent !important;
}
.everythingOnOneLine .navbar-default {
	float: left;
	margin-left: 0;
    margin-top: 5px;
    width: 100%;
}

#versions {
	padding: 10px 20px;
	float: left;
	 margin-top: 40px;
}

.centrora-news {
	float: right;
	margin-top: 50px;
	background-color: #00bcd4;
    border-radius: 2px;
    color: #ffffff;
    font-size: 10px;
    font-weight: bold;
    margin-bottom: 5px;
    margin-left: 10px;
    opacity: 1;
    padding: 0 6px;
}

.centrora-affiliates {
	background-color: transparent;
	float: right;
	margin-top: 49px;
	border-radius: 2px;
    color: #ffffff;
    font-size: 10px;
    font-weight: bold;
    margin-bottom: 5px;
    margin-left: 10px;
    opacity: 1;
    padding:0px 6px;
}

.centrora-affiliates .btn {
	font-size: 10px;
	padding: 0px 6px;
}
.icon-separator {
	background: rgba(255, 255, 255, 0.1) none repeat scroll 0 0;
    border-right: 1px solid #dfe8f1;
    height: 60px !important;
    left: 0px;
    position: relative;
    width: 60px !important;
    padding: 18px 15px 16px;
    text-align: center;
    float: left;
    color: #3e4855;
}
.header-wrapper {
	margin-left: 10px;
	color: #3e4855;
}

.header-wrapper small {
    display: block;
    font-size: 13px;
    font-weight: 400;
    opacity: 0.7;
    padding: 5px 0 0;
    text-transform: none;
    margin-left: 70px;
}


.dataTables_wrapper input,
.dataTables_wrapper select {
	background: #fff none repeat scroll 0 0;
    border: 1px solid #dfe8f1;
    box-shadow: 1px 1px 3px #f6f6f6 inset;
    color: #2b2f33;
    font-size: 13px;
    padding: 2px;
}

#save-button {
	margin-top: 10px;
	float: right;
}

.download-message {
	text-align: center;
	margin-top: 30px;
}

.vsscanner-piechart {
	margin-top: 20px;
	padding-top: 10px;
	border-top: 1px solid rgba(158, 173, 195, 0.16);
}

.alert-icon {
    float: left;
    height: 34px;
    line-height: 34px;
    margin: 5px 10px 0 0;
    text-align: center;
    width: 34px;
    padding: 5px;
    border-radius: 4px;
    color: #fff;
}
.btn-config {
	background-color: transparent;
	color: #858598;
}

#configModal {
	max-width: 800px;
	float: none;
	margin-left: auto;
	margin-right: auto;
}
#emailEditorForm .row {
	float: left;
    min-height: 35px;
    width: 100%;
    margin-top: 5px;
}

.mce-panel {
    background-color: #f0f0f0 !important;
    background-image: none !important;
    background-repeat: repeat-x;
    border: 1px solid #ddd !important;
}

.mce-btn { 
	background-image: none !important;
}
.mce-container, .mce-container *, .mce-widget, .mce-widget *, .mce-reset { 
	background-image: none !important;
}
.navbar-nav {
    float: left !important;
    margin: 0 !important;
}

.navbar-nav > li > a {
	padding: 11px 10px !important;
}

.navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus {
    box-shadow: none !important;
    text-shadow: none !important;
}
.caret {
    border-left: 4px solid transparent !important;
    border-right: 4px solid transparent !important;
    border-top: 4px solid !important;
    display: inline-block !important;
    height: 0 !important;
    margin-left: 2px !important;
    vertical-align: middle !important;
    width: 0 !important;
    margin-top: 0px !important;
}
.dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus {
    background-color: #eff4f6 !important;
    color: #2b2f33 !important;
    outline: 0 none !important;
    text-decoration: none !important;
    background-image: none !important;
}
.dropdown-menu > li > a {
    clear: both !important;
    display: block !important;
    font-weight: normal !important;
    line-height: 2 !important;
    white-space: nowrap !important;
}
.dropdown-menu li a {
    color: #858598 !important;
    padding: 5px 15px !important;
}
.dropdown-menu > li > a:hover,
.dropdown-menu > li > a:focus {
  text-decoration: none !important;
  color: #2b2f33 !important;
  background-color: #eff4f6 !important;
  background-image: none !important;
}

.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
    background-color: #faf9fa !important;
    color: #555555 !important;
}

label {
    display: inline-block !important;
    font-weight: bold !important;
    margin-bottom: 5px !important;
    max-width: 100% !important;
    font-size: 14px !important;
    padding: 8px 15px !important;
}

textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
	box-shadow: none !important;
	border-radius: 0px !important; 	
}

.label, .badge { 
	background-color: transparent !important;
	 text-shadow: none !important;
}

.onoffswitch-label {
	padding: 0px !important;
}

label, input, button, select, textarea {
	line-height: 2 !important;
}
.navbar-top {
	margin-top: 9px;
}

